# AI-Robot-Code

./: README.txt
cobot_magic/: .gitignore  tutorial.md
cobot_magic/aloha-devel/act/: inference.py  inference.sh  policy.py  test_accuracy.py  train.py  train.sh  utils.py
cobot_magic/aloha-devel/act/detr/models/: detr_vae.py
cobot_magic/camera_ws/src/ros_astra_camera/launch/: multi_camera.launch
cobot_magic/collect_data/: collect_data.py  replay_data.py  visualize_episodes.py
cobot_magic/remote_control_joint_ctrl/follow1/src/arm_control/: CMakeLists.txt
cobot_magic/remote_control_joint_ctrl/follow1/src/arm_control/include/App/: arm_control.h
cobot_magic/remote_control_joint_ctrl/follow1/src/arm_control/src/: arx.cpp
cobot_magic/remote_control_joint_ctrl/follow1/src/arm_control/src/App/: arm_control.cpp
cobot_magic/remote_control_joint_ctrl/follow2/src/arm_control/: CMakeLists.txt
cobot_magic/remote_control_joint_ctrl/follow2/src/arm_control/include/App/: solve.h
cobot_magic/remote_control_joint_ctrl/follow2/src/arm_control/models/: X5liteaa0.urdf
cobot_magic/remote_control_joint_ctrl/follow2/src/arm_control/src/: arx.cpp
cobot_magic/remote_control_joint_ctrl/master1/src/arm_control/: CMakeLists.txt
cobot_magic/remote_control_joint_ctrl/master1/src/arm_control/include/App/: arm_control.h  solve.h
cobot_magic/remote_control_joint_ctrl/master1/src/arm_control/models/: X5liteaa0.urdf
cobot_magic/remote_control_joint_ctrl/master1/src/arm_control/src/: arx.cpp
cobot_magic/remote_control_joint_ctrl/master1/src/arm_control/src/App/: arm_control.cpp
cobot_magic/remote_control_joint_ctrl/master2/src/arm_control/: CMakeLists.txt
cobot_magic/remote_control_joint_ctrl/master2/src/arm_control/include/App/: solve.h
cobot_magic/remote_control_joint_ctrl/master2/src/arm_control/src/: arx.cpp
cobot_magic/remote_control_joint_ctrl/master2/src/arm_control/src/App/: arm_control.cpp
cobot_magic/remote_control_joint_ctrl/tools/: build.sh  master.sh  puppet.sh  remote.sh
cobot_magic/remote_control_pose_ctrl/follow1/src/arm_control/: CMakeLists.txt
cobot_magic/remote_control_pose_ctrl/follow1/src/arm_control/src/: arx.cpp
cobot_magic/remote_control_pose_ctrl/follow2/src/arm_control/src/: arx.cpp
cobot_magic/remote_control_pose_ctrl/tools/: arx_can.rules  can.sh  delete_build_file.sh  master.sh  puppet.sh  remote.sh
cobot_magic/tools/: arx_can.rules  can.sh  cobot_magic_env.sh
